# gabrielrih-callmebot

./: .gitignore  README.md  __init__.py  example.py  pyproject.toml  setup.py  toFix.list
callMeBot/: config-example.yml  sendFreeMessage.py
callMeBot/sendNotification/: interface_ss.py  sendFreeMessage.py
callmebot/: __init__.py  callmebot.py  messages.py  whatsapp.py
config/: credentials-example.yml
usingShellScript/: sendFreeMessage.sh
